refactor: v1 phase 1 docs/
